feat: implement get search log
